# dynamic_k2tree

./: .gitignore  Makefile  README.md
evaluation/: Makefile  analysis.txt  create_k2tree.cpp  dmgen-500000  gmon.out  massif.out.2778  massif.out.30266  massif.out.3135  run_test.sh  uk-3  uk-4  uk-5  union.cpp
evaluation/add_edge/: Makefile  add_edge.gnuplot  add_mean.cpp  data_sdk-dmgen  run_test.sh  runs-data-dmgen  runs-data-dmgen-copy  runs-data-webgraph  runs-data-webgraph-copy
evaluation/add_edge/results/: runs-data-dmgen  runs-data-webgraph
evaluation/add_edge/results/eu-2015-host/: mem_add.txt  mem_add_background.txt  mem_add_delay.txt  mem_add_delay_munro.txt  runs_time_delay_munro.txt
evaluation/add_edge/results/in-2004/: mem_add.txt  mem_add_background.txt  mem_add_delay.txt  mem_add_delay_munro.txt  runs_time_delay_munro.txt
evaluation/background/: Makefile  add.cpp  add_background.cpp  add_delay  add_delay.cpp  add_delay_munro.cpp  add_deviation.cpp  run_test.sh
evaluation/contains/: Makefile  contains.cpp  create.cpp  limits-data-dmgen  limits-data-webgraph  run_test.sh  time-data-dmgen  time-data-webgraph  time-data-webgraph-copy
evaluation/delay_add_edge/: Makefile  add.cpp  delay_edge.gnuplot  run_test.sh
evaluation/delete_edge/: Makefile  create.cpp  delete.cpp  limits-data-dmgen  limits-data-webgraph  limits.data-dmgen  limits.data-webgraph  run_test.sh  time-data-dmgen  time-data-webgraph  time.cpp  time.data-dmgen  time.data-webgraph
evaluation/edge_iterator/: Makefile  edge_dmgen.gnuplot  edge_iterator.cpp  edge_webgraph.gnuplot  limits-data-dmgen  limits-data-webgraph  run_test.sh  time-data-dmgen  time-data-webgraph  time.cpp
evaluation/list_neighbor/: Makefile  create.cpp  limits-data-dmgen  limits-data-webgraph  limits.data-dmgen  list.cpp  run_test.sh  time-data-dmgen  time-data-webgraph  time-data-webgraph-copy  time.cpp
evaluation/neighbor_iterator/: Makefile  limits-data-dmgen  limits-data-webgraph  neighbor.gnuplot  neighbor_iterator.cpp  run_test.sh  time-data-dmgen  time-data-webgraph  time.cpp
evaluation/pageRank/: Makefile  pagerank.cpp  pagerank.gnuplot  run_test.sh  time.cpp
evaluation/serialized/: Makefile  bits_per.py  create.cpp  run.sh
evaluation/union_op/: Makefile  create_k2tree.cpp  create_k2tree_sdk.cpp  run_test.sh  run_test_sdk.sh  time-data-dmgen  time-data-webgraph  time-data-webgraph-copy  union.cpp  union_dmgen.gnuplot  union_sdk.c  union_webgraph.gnuplot
include/: Iterator_edge.hpp  adjacency_list.hpp  dk2tree.hpp  dk_edge_iterator.hpp  dk_tree.hpp  dktree.hpp  edge.hpp  edge_hash_table.hpp  iterator_edge.hpp  k_tree_extended.hpp  ktree_extended.hpp  utils.hpp
include/algorithm/: Algorithm.hpp
include/dktree/: AdjacencyList.hpp  Container0.hpp  Container0NeighIterator.hpp  Container_0.hpp  Container_0_neigh_iterator.hpp  DKtree.hpp  DKtreeEdgeIterator.hpp  DKtreeNeighbourIterator.hpp  DKtreeNodeIterator.hpp  DKtree_background.hpp  DKtree_background_wait.hpp  DKtree_delay.hpp  DKtree_delay_.hpp  EdgeHashTable.hpp  adjacency_list.hpp  dk_edge_iterator.hpp  dk_node_iterator.hpp  dktree.hpp  edge.hpp  edge_hash_table.hpp  union_support.hpp  utils.hpp
include/graph/: Graph.hpp
include/util/: LinkedList.hpp
lib/: dk_edge_iterator.cpp  dktree.cpp
test/: CMakeLists.txt  Makefile  adjacency_list_test.cpp  algorithm_test.cpp  dk2tree_test.cpp  dktree_test.cpp  edgeHashTableTests  edge_hash_table_test.cpp  heavy_test.cpp  k_tree_extended_tests.cpp  ktree_extended_tests.cpp  linkedList_test.cpp  test_utils.hpp
test_eval/: Makefile  complexity.cpp  create.cpp  delete.cpp  plot.sh  run_test.sh  union.cpp
(+66 files in other folders)
